# archml

./: .gitignore  CLAUDE.md  README.md  REQUIREMENTS.md  pyproject.toml  test.archml  todo.txt
.github/workflows/: ci.yml  claude_instruction.yml  claude_issue.yml  publish.yml
docs/: LANGUAGE_EXAMPLE.md  LANGUAGE_REFERENCE.md  LANGUAGE_SYNTAX.md  PROJECT_SCOPE.md
docs/examples/: azure_blob_pipeline.darchml  azure_blob_pipeline.farchml
docs/language_specs/: deployment_architecture.md  functional_architecture.md
docs/sphinx/: conf.py  index.rst
graphify-out/: .graphify_labels.json  .graphify_python  GRAPH_REPORT.md  graph.html  manifest.json
graphify-out/2026-06-16/: .graphify_labels.json  GRAPH_REPORT.md  cost.json  manifest.json
graphify-out/2026-06-17/: .graphify_labels.json  GRAPH_REPORT.md  manifest.json
graphify-out/cache/: stat-index.json
src/archml/: __init__.py
tests/: conftest.py
tests/cli/: test_main.py
tests/compiler/: test_artifact.py  test_build.py  test_compiler_integration.py  test_link.py  test_parser.py  test_scanner.py  test_semantic_analysis.py
tests/dot_sync/: flat.dot  flat.viz.json  nested.dot  nested.viz.json  with_terminals.dot  with_terminals.viz.json
tests/export/: test_assets.py  test_export.py
tests/model/: test_model.py
tests/parser/: test_lexer.py  test_parser.py
tests/sphinx_ext/: test_sphinx_ext.py
tests/validation/: __init__.py  test_checks.py
tests/views/: test_diagram.py  test_dot_sync.py  test_export.py  test_placement.py  test_resolver.py  test_topology.py
tests/webui/: test_app.py
tests/workspace/: test_config.py  test_git_ops.py  test_lockfile.py  test_resolve.py
tools/: build_js.py  ci.py  hatch_build.py  update_versions.py
vscode-extension/: .vscodeignore  language-configuration.json  package-lock.json  package.json
(+115 files in other folders)
