[project]
name = "archml"
version = "0.3.0"
description = "A text-based DSL for defining software architecture alongside code"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = ["pydantic>=2.0", "pyyaml>=6.0"]

[project.urls]
Repository = "https://github.com/amhellmund/archml"

[project.scripts]
archml = "archml.cli.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "sphinx>=7.0",
    "ty>=0.0.1a6",
    "yachalk>=0.1.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
path = "tools/hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["src/archml"]
exclude = ["src/archml/export/js"]

[tool.hatch.build.targets.sdist]
exclude = ["src/archml/export/js"]
